<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="program_title">All SMS by one tap</string>

    <string name="sms_send_success">SMS Sent!</string>
    <string name="sms_send_failed">SMS failed, please try again later!</string>
    <string name="sms_add_template">New template</string>
    <string name="sms_delete_template">Delete</string>
    <string name="sms_edit_template">Edit</string>
    <string name="image_content_plane">Sms how plane</string>
    <string name="sms_exit">Exit</string>

    <!-- Редактирование шаблона -->
    <string name="header_template_editor">Edit of template</string>
    <string name="title_template_label">Title template</string>
    <string name="template_title_hint">Type a title for the template.</string>
    <string name="text_category_label">Category of template</string>
    <string name="text_template_label">Text template</string>
    <string name="text_template_hint">Type a text for the template.</string>
    <string name="phone_template_label">Phone recipient</string>
    <string name="phone_template_hint">Enter the phone</string>
    <string name="favorite_template_label">Is favorite</string>
    <string name="select_phone_label">Select</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_categroy">Category not present</string>

    <!--Настройки-->
    <string name="setting_purchase_text">If you want to create more than two categories, you can buy them on google pay. To begin purchase?</string>
    <string name="header_purchase_editor">Purchase of categories</string>

    <!--Редактирование категории-->
    <string name="header_category_editor">Edit of categroy</string>
    <string name="category_name_label">Name category</string>
    <string name="category_name_hint">Type a name of category.</string>
    <string name="category_sms_selected">Selected</string>
    <string name="category_sms_available">Available</string>
    <string name="category_add_sms">Add selected sms-template to category?</string>
    <string name="category_remove_sms">Remove selected sms-template from category?</string>
    <string name="category_add_title">Add template</string>
    <string name="category_remove_title">Remove template</string>
    <string name="category_null">--Without category--</string>

    <string name="sms_sender_title">Send message?</string>
    <string name="sms_sender_text">This text \'%1$s\', will be send to the number \'%2$s\'.</string>

    <!-- actions-->
    <string name="action_all">All SMS</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_other">Other</string>

    <string-array name="screen_array">
        <item>All Sms</item>
        <item>Category</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="phone_prefix">tel. </string>

    <string name="about_string_1">"All Sms by one tap"</string>
    <string name="about_string_2">Supported OS: Android\nVersion: %1$s\nDeveloper: OOO «Kriate»
        (Krasnoyars city, Russian federation)\ne–mail: balu@kriate.ru\nтел.: (391) 215-44-30</string>

</resources>
