<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/categoryButtonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/categoryButtonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

    <ScrollView
        android:layout_above="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_name_label"
                />
            <EditText
                android:id="@+id/category_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/category_name_hint"/>
            <com.production.kriate.allsms.view.SlidingTabLayout
                android:id="@+id/category_sliding_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v4.view.ViewPager
                android:id="@+id/category_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:background="@android:color/white"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>